--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,3 +72,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
+  assets:
+    - graphics/ic_launcher.png
