--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,12 @@ dependencies:
   # english words
   english_words: ^3.1.3
 
+  # path provider
+  path_provider: ^0.4.1
+
+  # shared_preference
+  shared_preferences: 0.5.1+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
