--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # 国际化
+  flutter_localizations:
+    sdk: flutter
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -31,6 +35,9 @@ dependencies:
 
   # shared_preference
   shared_preferences: 0.5.1+1
+
+ # dio
+  dio: 2.0.18
 
 dev_dependencies:
   flutter_test:
